<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.pickcode.PickCodeFragment">

    <data>

        <variable
            name="viewEvents"
            type="com.puzre.httpcats.ui.pickcode.PickCodeViewEvents" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/httpCodesScale" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/howYourMood" />

        <Button
            android:id="@+id/informationalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="@{viewEvents::onClickInformational}"
            android:text="@string/informational" />

        <Button
            android:id="@+id/successfulButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="@{viewEvents::onClickSuccessful}"
            android:text="@string/successful" />

        <Button
            android:id="@+id/redirectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="@{viewEvents::onClickRedirection}"
            android:text="@string/redirection" />

        <Button
            android:id="@+id/clientErrorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="@{viewEvents::onClickClientError}"
            android:text="@string/client_error" />

        <Button
            android:id="@+id/serverErrorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewEvents::onClickServerError}"
            android:text="@string/server_error" />

    </LinearLayout>
</layout>